// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="http://facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  FACEBOOK
</a>
`;

exports[`Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="http://facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  FACEBOOK
</a>
`;

exports[`Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="http://facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  FACEBOOK
</a>
`;
